WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255210
REGRESSION: Thumbnail turns blank after choose A3/Tabloid paper size in Print Screen
https://bugs.webkit.org/show_bug.cgi?id=255210
Summary
REGRESSION: Thumbnail turns blank after choose A3/Tabloid paper size in Print...
Richard Robinson
Reported
2023-04-09 17:51:08 PDT
rdar://107503946
Attachments
Add attachment
proposed patch, testcase, etc.
Richard Robinson
Comment 1
2023-04-09 18:06:13 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12556
EWS
Comment 2
2023-04-10 12:14:32 PDT
Committed
262780@main
(0ad581ba4f4a): <
https://commits.webkit.org/262780@main
> Reviewed commits have been landed. Closing PR #12556 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug